# restless-mail

./: Makefile  default.nix  restless-mail.cabal  restless-mail.nix  shell.nix
client/: index.html
src/: Main.hs
src/Restless/: Mail.hs
src/Restless/Mail/: Parser.hs
