name:
  restless-mail
version:
  0.1.0.0
synopsis:
  The perfect mail client
homepage:
  https://less.rest/mail
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

executable restless-mail
  main-is:
    Main.hs
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    LambdaCase,
    OverloadedStrings,
    DeriveGeneric
  ghc-options:
    -O2 -threaded -Wall
  build-depends:
    base >=4.9 && <4.10,
    dirstream,
    pipes,
    pipes-attoparsec,
    pipes-bytestring,
    pipes-parse,
    pipes-safe,
    attoparsec,
    text,
    text-format,
    time,
    bytestring,
    system-filepath,
    system-fileio,
    thyme,
    old-locale,
    containers,
    aeson,
    lens,
    vector,
    sandi,
    text-icu,
    directory